Adding ability to customize ufw default policies.

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,6 +1,14 @@
 ---
 
 #
+# Default Policies
+#
+firewall_default_input_policy: "DROP"
+firewall_default_output_policy: "ACCEPT"
+firewall_default_forward_policy: "DROP"
+
+
+#
 # Common
 #
 firewall_whitelisted_hosts: []
