Changing ufw enable disable handlers.

--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -1,10 +1,10 @@
 ---
 
 - name: ufw disable
-  command: ufw disable
+  ufw: state=disabled
 
 - name: ufw enable
-  command: ufw enable
+  ufw: state=enabled
 
 - name: restart fail2ban
   service: name=fail2ban state=restarted
